--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f8f8f8;
+}
+.book-library{
+	background-color:#ffffff;
+}
+.book author{
+	color:#777777;
+}
+.book button{
+	color:#2ecc71;
+}
